# BCP

./: README.md  setup.cfg
src/bcppy/: __init__.py
src/bcppy/bcp/: __init__.py  bcp.py  util.py
