[metadata]
name = bcppy
version = 0.0.0
author = SCC
description = An implementation of BCP algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/25077667/BCP_algo_Python3
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src